# NT7534-Pico

./: CMakeLists.txt  README.md
lib/: NT7534.cpp  NT7534.h  parallelInterface.cpp  parallelInterface.h
src/: char_gen.txt  main.cpp
